removed debuggers, fixed spacing

--- a/public/style.css
+++ b/public/style.css
@@ -238,6 +238,9 @@ p {
 .points-received,
 .points-given {
     font-size: 26px;
+    padding-bottom: 10px;
+    margin: auto;
+    display: inline;
 }
 
 .points-received-box h2,
@@ -301,12 +304,6 @@ p {
     display: flex;
     padding-bottom: 20px;
     padding-left: 10%;
-}
-
-.points-received,
-.points-given {
-    margin: auto;
-    display: inline;
 }
 
 form.add-points-form {
